--- a/CTCOffice/src/main/java/CTCOffice/Main.fxml
+++ b/CTCOffice/src/main/java/CTCOffice/Main.fxml
@@ -1,14 +1,170 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="CTCOffice.Controllers.MainController"
-            prefHeight="400.0" prefWidth="600.0">
-    <TextField fx:id="testField" />
-</AnchorPane>
+<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CTCOffice.Controllers.MainController">
+  <columnConstraints>
+    <ColumnConstraints />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <ImageView fitWidth="300.0" pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="2147483647">
+         <image>
+            <Image url="@../../../resources/main/TrackLayout.png" />
+         </image>
+      </ImageView>
+      <GridPane hgap="5.0" style="-fx-border-color: grey;" vgap="5.0" GridPane.columnIndex="1" GridPane.rowSpan="2">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <HBox>
+               <children>
+                  <Label alignment="TOP_LEFT" contentDisplay="TOP" text="System">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <Label text="Time" GridPane.rowIndex="1" />
+            <Label text="14:01:24" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="Multiplier" GridPane.rowIndex="2" />
+            <ChoiceBox fx:id="multiplier" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="Automatic Mode" GridPane.rowIndex="3" />
+            <CheckBox mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Import Schedule" GridPane.rowIndex="4" />
+            <Button mnemonicParsing="false" text="Browse..." GridPane.columnIndex="1" GridPane.rowIndex="4" />
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </GridPane>
+      <GridPane hgap="5.0" style="-fx-border-color: grey;" vgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.rowSpan="2">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+         <children>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Block">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <Label text="Line" GridPane.rowIndex="1" />
+            <ChoiceBox fx:id="blockLine" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="Name" GridPane.rowIndex="2" />
+            <ChoiceBox fx:id="blockName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="Occupied" GridPane.rowIndex="3" />
+            <Label fx:id="blockOccupied" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Speed Limit" GridPane.rowIndex="4" />
+            <Label fx:id="blockSpeedLimit" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="Under Maintenance" GridPane.rowIndex="5" />
+            <Button fx:id="blockMaintenance" mnemonicParsing="false" onAction="#blockMaintenanceButton" text="N/A" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label text="Beacon" GridPane.rowIndex="6" />
+            <Button fx:id="blockBeacon" mnemonicParsing="false" text="Set Beacon" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+         </children>
+      </GridPane>
+      <GridPane hgap="5.0" style="-fx-border-color: grey;" vgap="5.0" GridPane.columnIndex="2" GridPane.rowSpan="2147483647">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label alignment="TOP_LEFT" text="Train">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <Button fx:id="trainCreate" disable="true" mnemonicParsing="false" onAction="#trainCreateButton" text="Create Train" GridPane.rowIndex="1" />
+            <Button fx:id="trainDispatch" disable="true" mnemonicParsing="false" onAction="#trainDispatchButton" text="Dispatch" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="Line" GridPane.rowIndex="2" />
+            <ChoiceBox fx:id="trainLine" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="Identifier" GridPane.rowIndex="3" />
+            <ChoiceBox fx:id="trainIdentifier" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Location" GridPane.rowIndex="4" />
+            <Label fx:id="trainLocation" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="Commanded Speed" GridPane.rowIndex="5" />
+            <Label fx:id="trainSpeed" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <children>
+                  <TextField fx:id="trainSpeedValue" />
+                  <Button fx:id="trainSpeedButton" minWidth="40.0" mnemonicParsing="false" onAction="#trainSpeedSet" text="Set" />
+               </children>
+            </HBox>
+            <Label text="Commanded Authority" GridPane.rowIndex="7" />
+            <Label fx:id="trainAuthorityBlocks" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
+               <children>
+                  <ChoiceBox fx:id="trainAuthoritySelect" />
+                  <Button minWidth="40.0" mnemonicParsing="false" onAction="#trainAuthoritySet" text="Set" />
+               </children>
+            </HBox>
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </GridPane>
+   </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
+</GridPane>
