--- a/TrainModel/src/TrainModel/TrainModelUI.fxml
+++ b/TrainModel/src/TrainModel/TrainModelUI.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" prefHeight="698.0000999999975" prefWidth="1146.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="TrainModel.TrainModelController">
+<AnchorPane maxHeight="1.7976931348623157E308" prefHeight="698.0000999999975" prefWidth="1146.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="TrainModel.TrainModel">
   <children>
     <Pane fx:id="DROP_DOWN" layoutX="0.0" layoutY="1.0" prefHeight="201.0" prefWidth="179.0">
       <children>
