--- a/TrackController/src/main/resources/fxml/TrackController.fxml
+++ b/TrackController/src/main/resources/fxml/TrackController.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="834.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TrackController.TrackViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="834.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ListView fx:id="controllerList" onMouseClicked="#controllerSelected" prefHeight="52.0" prefWidth="533.0" />
       <TableView fx:id="blockList" layoutY="51.0" onMouseClicked="#blockSelected" prefHeight="201.0" prefWidth="533.0">
