--- a/System/src/main/resources/fxml/TrainUI.fxml
+++ b/System/src/main/resources/fxml/TrainUI.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" prefHeight="698.0000999999975" prefWidth="1146.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="TrainModel.Train">
+<AnchorPane maxHeight="1.7976931348623157E308" prefHeight="698.0000999999975" prefWidth="1146.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" >
   <children>
     <Pane fx:id="DROP_DOWN" layoutX="0.0" layoutY="1.0" prefHeight="201.0" prefWidth="179.0">
       <children>
@@ -23,7 +23,7 @@
     </Pane>
     <Pane id="E_BRAKE" layoutX="5.0" layoutY="566.0" prefHeight="126.0" prefWidth="124.0">
       <children>
-        <Button fx:id="EMERGENCY_BRAKE" layoutX="-4.0" layoutY="0.0" mnemonicParsing="false" onAction="#setEmergencyBrake" prefHeight="132.0001220703125" prefWidth="136.00001362305193" style="-fx-background-color: crimson" text="E" textFill="WHITE">
+        <Button fx:id="EMERGENCY_BRAKE" layoutX="-4.0" layoutY="0.0" mnemonicParsing="false"  prefHeight="132.0001220703125" prefWidth="136.00001362305193" style="-fx-background-color: crimson" text="E" textFill="WHITE">
           <font>
             <Font size="35.0" />
           </font>
@@ -76,9 +76,9 @@
     </Pane>
     <Pane layoutX="654.0" layoutY="359.0" prefHeight="200.0" prefWidth="200.0">
       <children>
-        <RadioButton fx:id="ENGINE_FAILURE" layoutX="18.0" layoutY="4.0" mnemonicParsing="false" onAction="#setEngineFailure" prefHeight="68.0" prefWidth="164.0" text="Train Engine Failure" />
-        <RadioButton fx:id="SIGNAL_FAILURE" layoutX="18.0" layoutY="61.0" mnemonicParsing="false" onAction="#setSignalPickupFailure" prefHeight="68.0" prefWidth="164.0" text="Signal Pickup Failure" />
-        <RadioButton fx:id="BRAKE_FAILURE" layoutX="18.0" layoutY="124.0" mnemonicParsing="false" onAction="#setBrakeFailure" prefHeight="68.0" prefWidth="164.0" text="Brake Failure" />
+        <RadioButton fx:id="ENGINE_FAILURE" layoutX="18.0" layoutY="4.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="164.0" text="Train Engine Failure" />
+        <RadioButton fx:id="SIGNAL_FAILURE" layoutX="18.0" layoutY="61.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="164.0" text="Signal Pickup Failure" />
+        <RadioButton fx:id="BRAKE_FAILURE" layoutX="18.0" layoutY="124.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="164.0" text="Brake Failure" />
       </children>
     </Pane>
     <Slider layoutX="72.0" layoutY="127.0" orientation="VERTICAL" prefHeight="167.0" prefWidth="52.0" />
