--- a/System/src/main/resources/fxml/TrainUI.fxml
+++ b/System/src/main/resources/fxml/TrainUI.fxml
@@ -37,7 +37,7 @@
     </Pane>
     <Pane id="CENTRAL_INDICATORS" layoutX="298.0" layoutY="47.0" prefHeight="291.0" prefWidth="551.0">
       <children>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ccedff" height="295.0390625" layoutX="-49.0" layoutY="-2.0" stroke="WHITE" strokeType="INSIDE" width="653.0" />
+        <Rectangle fx:id="LEFT_DOORS" arcHeight="5.0" arcWidth="5.0" fill="#ccedff" height="295.0390625" layoutX="-49.0" layoutY="-2.0" stroke="WHITE" strokeType="INSIDE" width="653.0" />
         <Pane fx:id="ACCELERATION_GAUGE_PANE" layoutX="350.0" layoutY="14.0" prefHeight="176.9610595703125" prefWidth="199.0" />
         <Pane fx:id="SPEED_GAUGE_PANE" layoutX="-46.0" layoutY="14.0" prefHeight="176.96103749999747" prefWidth="200.0" />
         <Label layoutX="208.0" layoutY="2.0" text="Input Power (kW)">
@@ -81,7 +81,7 @@
         <RadioButton fx:id="BRAKE_FAILURE" layoutX="18.0" layoutY="124.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="164.0" text="Brake Failure" />
       </children>
     </Pane>
-    <Slider layoutX="72.0" layoutY="127.0" orientation="VERTICAL" prefHeight="167.0" prefWidth="52.0" />
+    <Slider fx:id="CABIN_TEMP" layoutX="72.0" layoutY="127.0" orientation="VERTICAL" prefHeight="167.0" prefWidth="52.0" />
     <Label layoutX="35.0" layoutY="347.0" text="Cabin Temperature" />
     <TextField layoutX="30.0" layoutY="300.0" prefHeight="37.9609375" prefWidth="136.0" />
     <Circle fx:id="BRAKE_INDICATOR" fill="WHITE" layoutX="90.0" layoutY="464.0" radius="24.0" strokeType="INSIDE">
@@ -89,13 +89,13 @@
         <Color blue="0.500" green="0.500" red="0.500" fx:id="x3" />
       </stroke>
     </Circle>
-    <Circle fill="WHITE" layoutX="321.0" layoutY="465.0" radius="24.0" stroke="$x3" strokeType="INSIDE" />
+    <Circle fx:id="LIGHTS_INDICATOR" fill="WHITE" layoutX="321.0" layoutY="465.0" radius="24.0" stroke="$x3" strokeType="INSIDE" />
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="78.0" layoutX="473.0" layoutY="425.0" strokeType="INSIDE" width="26.0">
       <stroke>
         <Color blue="0.625" green="0.625" red="0.625" fx:id="x4" />
       </stroke>
     </Rectangle>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="78.0" layoutX="525.0" layoutY="426.0" stroke="$x4" strokeType="INSIDE" width="26.0" />
+    <Rectangle fx:id="RIGHT_DOORS" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="78.0" layoutX="525.0" layoutY="426.0" stroke="$x4" strokeType="INSIDE" width="26.0" />
     <Label layoutX="68.0" layoutY="508.0" text="Brakes" />
     <Label layoutX="493.0" layoutY="514.0" text="Doors" />
     <Label layoutX="300.0" layoutY="508.0" text="Lights" />
