--- a/System/src/main/resources/fxml/Main.fxml
+++ b/System/src/main/resources/fxml/Main.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.152" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CTCOffice.Controllers.MainController">
+<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.152" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -56,11 +56,11 @@
                </children>
             </HBox>
             <Label text="Time" GridPane.rowIndex="1" />
-            <Label text="14:01:24" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="currentTime" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label text="Multiplier" GridPane.rowIndex="2" />
             <ChoiceBox fx:id="multiplier" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="Automatic Mode" GridPane.rowIndex="3" />
-            <CheckBox mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <CheckBox fx:id="mode" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label text="Import Schedule" GridPane.rowIndex="4" />
             <Button mnemonicParsing="false" text="Browse..." GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
@@ -105,8 +105,8 @@
             <Label fx:id="blockSpeedLimit" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <Label text="Under Maintenance" GridPane.rowIndex="5" />
             <Button fx:id="blockMaintenance" disable="true" mnemonicParsing="false" text="N/A" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Label text="Beacon" GridPane.rowIndex="6" />
-            <Button fx:id="blockBeacon" mnemonicParsing="false" text="Set Beacon" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <!--<Label text="Beacon" GridPane.rowIndex="6" />
+            <Button fx:id="blockBeacon" mnemonicParsing="false" text="Set Beacon" GridPane.columnIndex="1" GridPane.rowIndex="6" />-->
          </children>
       </GridPane>
       <GridPane hgap="5.0" style="-fx-border-color: grey;" vgap="5.0" GridPane.columnIndex="2" GridPane.rowSpan="2147483647">
