--- a/System/src/main/resources/fxml/TrackController.fxml
+++ b/System/src/main/resources/fxml/TrackController.fxml
@@ -39,7 +39,7 @@
       <Label layoutX="176.0" layoutY="413.0" text="Track Circuit:" />
       <Label layoutX="178.0" layoutY="440.0" text="Power Failure:" />
       <Label layoutX="20.0" layoutY="448.0" text="Heater:" />
-      <Label layoutX="339.0" layoutY="412.0" text="Switch Position:" />
+      <Label layoutX="339.0" layoutY="412.0" onMouseClicked="#flipSwitch" text="Switch Position:" />
       <Label layoutX="339.0" layoutY="439.0" text="Crossing Bar:" />
       <Label layoutX="339.0" layoutY="388.0" text="Occupancy:" />
       <Label fx:id="blockNumber" layoutX="164.0" layoutY="284.0" />
