--- a/System/src/main/resources/fxml/Main.fxml
+++ b/System/src/main/resources/fxml/Main.fxml
@@ -105,6 +105,8 @@
             <Label fx:id="blockSpeedLimit" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <Label text="Under Maintenance" GridPane.rowIndex="5" />
             <Button fx:id="blockMaintenance" disable="true" mnemonicParsing="false" text="N/A" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label text="Switch Operation" GridPane.rowIndex="6" />
+            <Button fx:id="blockSwitch" disable="true" mnemonicParsing="false" text="N/A" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <!--<Label text="Beacon" GridPane.rowIndex="6" />
             <Button fx:id="blockBeacon" mnemonicParsing="false" text="Set Beacon" GridPane.columnIndex="1" GridPane.rowIndex="6" />-->
          </children>
