--- a/System/src/main/resources/fxml/Main.fxml
+++ b/System/src/main/resources/fxml/Main.fxml
@@ -62,7 +62,7 @@
             <Label text="Automatic Mode" GridPane.rowIndex="3" />
             <CheckBox fx:id="mode" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label text="Import Schedule" GridPane.rowIndex="4" />
-            <Button mnemonicParsing="false" text="Browse..." GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Button fx:id="importSchedule" mnemonicParsing="false" text="Browse..." GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
