--- a/System/src/main/resources/fxml/Main.fxml
+++ b/System/src/main/resources/fxml/Main.fxml
@@ -65,7 +65,7 @@
             <Label text="Import Schedule" GridPane.rowIndex="4" />
             <Button fx:id="importSchedule" mnemonicParsing="false" text="Browse..." GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <Label text="Throughput (passengers/hour)" wrapText="true" GridPane.rowIndex="5" />
-            <Label text="0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label fx:id="throughput" text="0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
