--- a/System/src/main/resources/fxml/TrainUI.fxml
+++ b/System/src/main/resources/fxml/TrainUI.fxml
@@ -20,7 +20,7 @@
     </Pane>
     <Pane id="ROUTE_INFORMATION_SYSTEM" layoutX="129.0" layoutY="566.0" prefHeight="126.0" prefWidth="1007.0">
       <children>
-        <TextField fx:id="RIS" layoutX="8.0" layoutY="0.0" prefHeight="132.0001220703125" prefWidth="1006.999977929685" style="-fx-background-color: black" />
+        <TextField fx:id="RIS" layoutX="8.0" layoutY="0.0" prefHeight="132.0001220703125" prefWidth="1006.999977929685" style="-fx-background-color: black;-fx-text-fill: green; -fx-font-size: 24;" />
       </children>
     </Pane>
     <Pane id="CENTRAL_INDICATORS" layoutX="298.0" layoutY="47.0" prefHeight="291.0" prefWidth="551.0">
