--- a/System/src/main/resources/fxml/TrackController.fxml
+++ b/System/src/main/resources/fxml/TrackController.fxml
@@ -1,64 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="834.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <ListView fx:id="controllerList" onMouseClicked="#controllerSelected" prefHeight="52.0" prefWidth="533.0" />
-      <TableView fx:id="blockList" layoutY="51.0" onMouseClicked="#blockSelected" prefHeight="201.0" prefWidth="533.0">
-        <columns>
-          <TableColumn fx:id="lineColumn" prefWidth="75.0" text="Line" />
-          <TableColumn fx:id="numberColumn" prefWidth="104.0" text="Block Number" />
-            <TableColumn fx:id="infrastructureColumn" prefWidth="352.0" text="Infastructure" />
-        </columns>
-      </TableView>
-      <Label layoutX="41.0" layoutY="284.0" text="Block Number:" />
-      <Label layoutX="43.0" layoutY="318.0" text="Infrastructure:" />
-      <Label layoutX="243.0" layoutY="318.0" text="Block Size:" />
-      <Label layoutX="181.0" layoutY="350.0" text="Current Status" underline="true">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="243.0" layoutY="284.0" text="Block Line:" />
-      <Label layoutX="176.0" layoutY="252.0" text="Block Information">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="20.0" layoutY="383.0" text="Speed:" />
-      <Label layoutX="20.0" layoutY="404.0" text="Authority:" />
-      <Label layoutX="20.0" layoutY="425.0" prefHeight="17.0" prefWidth="42.0" text="Lights:" />
-      <Label layoutX="176.0" layoutY="386.0" text="Rail Broken:" />
-      <Label layoutX="176.0" layoutY="413.0" text="Track Circuit:" />
-      <Label layoutX="178.0" layoutY="440.0" text="Power Failure:" />
-      <Label layoutX="20.0" layoutY="448.0" text="Heater:" />
-      <Label layoutX="339.0" layoutY="412.0" onMouseClicked="#flipSwitch" text="Switch Position:" />
-      <Label layoutX="339.0" layoutY="439.0" text="Crossing Bar:" />
-      <Label layoutX="339.0" layoutY="388.0" text="Occupancy:" />
-      <Label fx:id="blockNumber" layoutX="164.0" layoutY="284.0" />
-      <Label fx:id="blockInfrastructure" layoutX="164.0" layoutY="318.0" />
-      <Label fx:id="blockLine" layoutX="359.0" layoutY="284.0" />
-      <Label fx:id="blockSize" layoutX="359.0" layoutY="318.0" />
-      <Label fx:id="blockSpeed" layoutX="114.0" layoutY="383.0" onMouseClicked="#switchAuthority" />
-      <Label fx:id="blockAuthority" layoutX="114.0" layoutY="405.0" />
-      <Label fx:id="blockLights" layoutX="114.0" layoutY="425.0" />
-      <Label fx:id="blockHeater" layoutX="114.0" layoutY="448.0" />
-      <Label fx:id="blockRailBroken" layoutX="288.0" layoutY="386.0" onMouseClicked="#switchFailure" />
-      <Label fx:id="blockTrackCircuit" layoutX="288.0" layoutY="412.0" />
-      <Label fx:id="blockPowerFailure" layoutX="288.0" layoutY="440.0" />
-      <Label fx:id="blockOccupancy" layoutX="472.0" layoutY="388.0" onMouseClicked="#switchOccupancy" />
-      <Label fx:id="blockSwitchPosition" layoutX="472.0" layoutY="414.0" />
-      <Label fx:id="blockCrossingBar" layoutX="472.0" layoutY="440.0" />
-      <TextArea fx:id="plcContents" editable="false" layoutX="533.0" layoutY="52.0" prefHeight="371.0" prefWidth="301.0" />
-      <ListView fx:id="plcList" layoutX="533.0" onMouseClicked="#plcSelected" prefHeight="52.0" prefWidth="301.0" />
-      <Button layoutX="676.0" layoutY="423.0" mnemonicParsing="false" onMouseClicked="#addPLC" prefHeight="52.0" prefWidth="157.0" text="Load PLC" />
-      <Button layoutX="535.0" layoutY="423.0" mnemonicParsing="false" onMouseClicked="#plcActivated" prefHeight="52.0" prefWidth="141.0" text="Activate" />
-   </children>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0"
+            prefWidth="834.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <ListView fx:id="controllerList" onMouseClicked="#controllerSelected" prefHeight="52.0" prefWidth="533.0"/>
+        <TableView fx:id="blockList" layoutY="51.0" onMouseClicked="#blockSelected" prefHeight="201.0"
+                   prefWidth="533.0">
+            <columns>
+                <TableColumn fx:id="lineColumn" prefWidth="75.0" text="Line"/>
+                <TableColumn fx:id="numberColumn" prefWidth="104.0" text="Block Number"/>
+                <TableColumn fx:id="infrastructureColumn" prefWidth="352.0" text="Infastructure"/>
+            </columns>
+        </TableView>
+        <Label layoutX="41.0" layoutY="284.0" text="Block Number:"/>
+        <Label layoutX="43.0" layoutY="318.0" text="Infrastructure:"/>
+        <Label layoutX="243.0" layoutY="318.0" text="Block Size:"/>
+        <Label layoutX="181.0" layoutY="350.0" text="Current Status" underline="true">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <Label layoutX="243.0" layoutY="284.0" text="Block Line:"/>
+        <Label layoutX="176.0" layoutY="252.0" text="Block Information">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <Label layoutX="20.0" layoutY="383.0" text="Speed:"/>
+        <Label layoutX="20.0" layoutY="404.0" text="Authority:"/>
+        <Label layoutX="20.0" layoutY="425.0" prefHeight="17.0" prefWidth="42.0" text="Lights:"/>
+        <Label layoutX="176.0" layoutY="386.0" text="Rail Broken:"/>
+        <Label layoutX="176.0" layoutY="413.0" text="Track Circuit:"/>
+        <Label layoutX="178.0" layoutY="440.0" text="Power Failure:"/>
+        <Label layoutX="20.0" layoutY="448.0" text="Heater:"/>
+        <Label layoutX="339.0" layoutY="412.0" onMouseClicked="#flipSwitch" text="Switch Position:"/>
+        <Label layoutX="339.0" layoutY="439.0" text="Crossing Bar:"/>
+        <Label layoutX="339.0" layoutY="388.0" text="Occupancy:"/>
+        <Label fx:id="blockNumber" layoutX="164.0" layoutY="284.0"/>
+        <Label fx:id="blockInfrastructure" layoutX="164.0" layoutY="318.0"/>
+        <Label fx:id="blockLine" layoutX="359.0" layoutY="284.0"/>
+        <Label fx:id="blockSize" layoutX="359.0" layoutY="318.0"/>
+        <Label fx:id="blockSpeed" layoutX="114.0" layoutY="383.0" onMouseClicked="#switchAuthority"/>
+        <Label fx:id="blockAuthority" layoutX="114.0" layoutY="405.0"/>
+        <Label fx:id="blockLights" layoutX="114.0" layoutY="425.0"/>
+        <Label fx:id="blockHeater" layoutX="114.0" layoutY="448.0"/>
+        <Label fx:id="blockRailBroken" layoutX="288.0" layoutY="386.0" onMouseClicked="#switchFailure"/>
+        <Label fx:id="blockTrackCircuit" layoutX="288.0" layoutY="412.0"/>
+        <Label fx:id="blockPowerFailure" layoutX="288.0" layoutY="440.0"/>
+        <Label fx:id="blockOccupancy" layoutX="472.0" layoutY="388.0" onMouseClicked="#switchOccupancy"/>
+        <Label fx:id="blockSwitchPosition" layoutX="472.0" layoutY="414.0"/>
+        <Label fx:id="blockCrossingBar" layoutX="472.0" layoutY="440.0"/>
+        <TextArea fx:id="plcContents" editable="false" layoutX="533.0" layoutY="52.0" prefHeight="371.0"
+                  prefWidth="301.0"/>
+        <ListView fx:id="plcList" layoutX="533.0" onMouseClicked="#plcSelected" prefHeight="52.0" prefWidth="301.0"/>
+        <Button layoutX="676.0" layoutY="423.0" mnemonicParsing="false" onMouseClicked="#addPLC" prefHeight="52.0"
+                prefWidth="157.0" text="Load PLC"/>
+        <Button layoutX="535.0" layoutY="423.0" mnemonicParsing="false" onMouseClicked="#plcActivated" prefHeight="52.0"
+                prefWidth="141.0" text="Activate"/>
+    </children>
 </AnchorPane>
