--- a/CTCOffice/src/main/resources/fxml/StopView.fxml
+++ b/CTCOffice/src/main/resources/fxml/StopView.fxml
@@ -3,16 +3,16 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-
-<HBox fx:id="root" alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.layout.*?>
+<HBox fx:id="root" alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity"
+      xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
     <StackPane alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
         <HBox fx:id="contentBox">
-            <Label fx:id="contentLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Label" HBox.hgrow="ALWAYS" />
+            <Label fx:id="contentLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                   text="Label" HBox.hgrow="ALWAYS"/>
             <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#delete" text="X" visible="false">
             </Button>
         </HBox>
-        <TextField fx:id="contentInput" promptText="What needs to be done?" visible="false" />
+        <TextField fx:id="contentInput" promptText="What needs to be done?" visible="false"/>
     </StackPane>
 </HBox>
