--- a/System/src/main/resources/fxml/TrainUI.fxml
+++ b/System/src/main/resources/fxml/TrainUI.fxml
@@ -1,105 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-
-<AnchorPane maxHeight="1.7976931348623157E308" prefHeight="698.0000999999975" prefWidth="1146.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
-  <children>
-    <Pane id="E_BRAKE" layoutX="5.0" layoutY="566.0" prefHeight="126.0" prefWidth="124.0">
-      <children>
-        <Button fx:id="EMERGENCY_BRAKE" layoutX="-4.0" layoutY="0.0" mnemonicParsing="false" prefHeight="132.0001220703125" prefWidth="136.00001362305193" style="-fx-background-color: crimson" text="E" textFill="WHITE">
-          <font>
-            <Font size="35.0" />
-          </font>
-        </Button>
-      </children>
-    </Pane>
-    <Pane id="ROUTE_INFORMATION_SYSTEM" layoutX="129.0" layoutY="566.0" prefHeight="126.0" prefWidth="1007.0">
-      <children>
-        <TextField fx:id="RIS" layoutX="8.0" layoutY="0.0" prefHeight="132.0001220703125" prefWidth="1006.999977929685" style="-fx-background-color: black;-fx-text-fill: green; -fx-font-size: 24;" />
-      </children>
-    </Pane>
-    <Pane id="CENTRAL_INDICATORS" layoutX="298.0" layoutY="47.0" prefHeight="291.0" prefWidth="551.0">
-      <children>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ccedff" height="295.0390625" layoutX="-49.0" layoutY="-2.0" stroke="WHITE" strokeType="INSIDE" width="653.0" />
-        <Pane fx:id="ACCELERATION_GAUGE_PANE" layoutX="350.0" layoutY="14.0" prefHeight="176.9610595703125" prefWidth="199.0">
-          <children>
-            <TextField fx:id="POWER" alignment="CENTER" layoutX="-146.0" layoutY="14.0" prefHeight="37.9609375" prefWidth="146.0" />
-          </children>
+<?import javafx.scene.text.Font?>
+<AnchorPane maxHeight="1.7976931348623157E308" prefHeight="698.0000999999975" prefWidth="1146.0"
+            xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+    <children>
+        <Pane id="E_BRAKE" layoutX="5.0" layoutY="566.0" prefHeight="126.0" prefWidth="124.0">
+            <children>
+                <Button fx:id="EMERGENCY_BRAKE" layoutX="-4.0" layoutY="0.0" mnemonicParsing="false"
+                        prefHeight="132.0001220703125" prefWidth="136.00001362305193"
+                        style="-fx-background-color: crimson" text="E" textFill="WHITE">
+                    <font>
+                        <Font size="35.0"/>
+                    </font>
+                </Button>
+            </children>
         </Pane>
-        <Pane fx:id="SPEED_GAUGE_PANE" layoutX="-46.0" layoutY="14.0" prefHeight="176.96103749999747" prefWidth="200.0" />
-        <Label layoutX="229.0" layoutY="4.0" text="Input Power">
-          <font>
-            <Font name="Arial" size="18.0" fx:id="x1" />
-          </font>
-        </Label>
-        <Label font="$x1" layoutX="245.0" layoutY="259.0" text="Authority" />
-        <TextField fx:id="AUTHORITY" alignment="CENTER" layoutX="204.0" layoutY="221.0" prefHeight="37.9609375" prefWidth="146.0" />
-        <Label layoutX="324.0" layoutY="37.0" text="kW" />
-        <Label layoutX="328.0" layoutY="230.0" text="mi" />
-      </children>
-    </Pane>
-    <Pane id="RIGHT_HAND_INDICATORS" layoutX="815.0" layoutY="5.0" prefHeight="561.0" prefWidth="331.0">
-      <children>
-        <TextField id="ID" fx:id="LENGTH" layoutX="183.0" layoutY="108.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
-        <Label layoutX="126.0" layoutY="116.0" text="Length" textAlignment="CENTER">
-          <font>
-            <Font size="16.0" fx:id="x2" />
-          </font>
-        </Label>
-        <Label font="$x2" layoutX="144.0" layoutY="350.0" text="Cars" textAlignment="CENTER" />
-        <Label font="$x2" layoutX="92.0" layoutY="408.0" text="Crew Count" textAlignment="CENTER" />
-        <Label font="$x2" layoutX="132.0" layoutY="174.0" text="Width" textAlignment="CENTER" />
-        <Label font="$x2" layoutX="127.0" layoutY="233.0" text="Height" textAlignment="CENTER" />
-        <Label font="$x2" layoutX="56.0" layoutY="469.0" text="Passenger Count" textAlignment="CENTER" />
-        <Label font="$x2" layoutX="123.0" layoutY="290.0" text="Weight" textAlignment="CENTER" />
-        <TextField id="LENGTH" fx:id="ID" layoutX="183.0" layoutY="54.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
-        <TextField fx:id="WIDTH" layoutX="183.0" layoutY="166.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
-        <TextField fx:id="HEIGHT" layoutX="183.0" layoutY="225.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
-        <TextField fx:id="MASS" layoutX="183.0" layoutY="282.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
-        <TextField fx:id="CARS" layoutX="183.0" layoutY="342.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
-        <TextField fx:id="CREW_COUNT" layoutX="183.0" layoutY="400.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
-        <TextField fx:id="PASSENGER_COUNT" layoutX="183.0" layoutY="461.0" prefHeight="37.9609375" prefWidth="123.99993896484375" />
-        <Label font="$x2" layoutX="139.0" layoutY="62.0" text="Train" textAlignment="CENTER" />
-        <Label layoutX="293.0" layoutY="117.0" text="ft" />
-        <Label layoutX="293.0" layoutY="175.0" text="ft" />
-        <Label layoutX="293.0" layoutY="234.0" text="ft" />
-        <Label layoutX="284.0" layoutY="291.0" text="lbs" />
-      </children>
-    </Pane>
-    <Pane layoutX="654.0" layoutY="359.0" prefHeight="200.0" prefWidth="200.0">
-      <children>
-        <RadioButton fx:id="ENGINE_FAILURE" layoutX="18.0" layoutY="4.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="164.0" text="Train Engine Failure" />
-        <RadioButton fx:id="SIGNAL_FAILURE" layoutX="18.0" layoutY="61.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="164.0" text="Signal Pickup Failure" />
-        <RadioButton fx:id="BRAKE_FAILURE" layoutX="18.0" layoutY="124.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="164.0" text="Brake Failure" />
-      </children>
-    </Pane>
-    <Slider id="CABIN_TEMP" fx:id="CABIN_TEMP_SLIDER" layoutX="91.0" layoutY="83.0" orientation="VERTICAL" prefHeight="167.0" prefWidth="52.0" />
-    <Label layoutX="54.0" layoutY="303.0" text="Cabin Temperature" />
-    <TextField fx:id="CABIN_TEMP" layoutX="49.0" layoutY="256.0" prefHeight="37.9609375" prefWidth="136.0" />
-    <Circle fx:id="BRAKE_INDICATOR" fill="WHITE" layoutX="112.0" layoutY="445.0" radius="24.0" strokeType="INSIDE">
-      <stroke>
-        <Color blue="0.500" green="0.500" red="0.500" fx:id="x3" />
-      </stroke>
-    </Circle>
-    <Circle fx:id="LIGHTS_INDICATOR" fill="WHITE" layoutX="306.0" layoutY="446.0" radius="24.0" stroke="$x3" strokeType="INSIDE" />
-    <Rectangle fx:id="LEFT_DOORS" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="78.0" layoutX="466.0" layoutY="411.0" strokeType="INSIDE" width="26.0">
-      <stroke>
-        <Color blue="0.625" green="0.625" red="0.625" fx:id="x4" />
-      </stroke>
-    </Rectangle>
-    <Rectangle fx:id="RIGHT_DOORS" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="78.0" layoutX="518.0" layoutY="412.0" stroke="$x4" strokeType="INSIDE" width="26.0" />
-    <Label layoutX="90.0" layoutY="489.0" text="Brakes" />
-    <Label layoutX="486.0" layoutY="500.0" text="Doors" />
-    <Label layoutX="285.0" layoutY="489.0" text="Lights" />
-    <Label layoutX="557.0" layoutY="440.0" text="R" />
-    <Label layoutX="444.0" layoutY="441.0" text="L" />
-    <Label layoutX="171.0" layoutY="265.0" text="F" />
-    <Label layoutX="137.0" layoutY="230.0" text="0   F" />
-    <Label layoutX="131.0" layoutY="88.0" text="100  F" />
-  </children>
+        <Pane id="ROUTE_INFORMATION_SYSTEM" layoutX="129.0" layoutY="566.0" prefHeight="126.0" prefWidth="1007.0">
+            <children>
+                <TextField fx:id="RIS" layoutX="8.0" layoutY="0.0" prefHeight="132.0001220703125"
+                           prefWidth="1006.999977929685"
+                           style="-fx-background-color: black;-fx-text-fill: green; -fx-font-size: 24;"/>
+            </children>
+        </Pane>
+        <Pane id="CENTRAL_INDICATORS" layoutX="298.0" layoutY="47.0" prefHeight="291.0" prefWidth="551.0">
+            <children>
+                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ccedff" height="295.0390625" layoutX="-49.0"
+                           layoutY="-2.0" stroke="WHITE" strokeType="INSIDE" width="653.0"/>
+                <Pane fx:id="ACCELERATION_GAUGE_PANE" layoutX="350.0" layoutY="14.0" prefHeight="176.9610595703125"
+                      prefWidth="199.0">
+                    <children>
+                        <TextField fx:id="POWER" alignment="CENTER" layoutX="-146.0" layoutY="14.0"
+                                   prefHeight="37.9609375" prefWidth="146.0"/>
+                    </children>
+                </Pane>
+                <Pane fx:id="SPEED_GAUGE_PANE" layoutX="-46.0" layoutY="14.0" prefHeight="176.96103749999747"
+                      prefWidth="200.0"/>
+                <Label layoutX="229.0" layoutY="4.0" text="Input Power">
+                    <font>
+                        <Font name="Arial" size="18.0" fx:id="x1"/>
+                    </font>
+                </Label>
+                <Label font="$x1" layoutX="245.0" layoutY="259.0" text="Authority"/>
+                <TextField fx:id="AUTHORITY" alignment="CENTER" layoutX="204.0" layoutY="221.0" prefHeight="37.9609375"
+                           prefWidth="146.0"/>
+                <Label layoutX="324.0" layoutY="37.0" text="kW"/>
+                <Label layoutX="328.0" layoutY="230.0" text="mi"/>
+            </children>
+        </Pane>
+        <Pane id="RIGHT_HAND_INDICATORS" layoutX="815.0" layoutY="5.0" prefHeight="561.0" prefWidth="331.0">
+            <children>
+                <TextField id="ID" fx:id="LENGTH" layoutX="183.0" layoutY="108.0" prefHeight="37.9609375"
+                           prefWidth="123.99993896484375"/>
+                <Label layoutX="126.0" layoutY="116.0" text="Length" textAlignment="CENTER">
+                    <font>
+                        <Font size="16.0" fx:id="x2"/>
+                    </font>
+                </Label>
+                <Label font="$x2" layoutX="144.0" layoutY="350.0" text="Cars" textAlignment="CENTER"/>
+                <Label font="$x2" layoutX="92.0" layoutY="408.0" text="Crew Count" textAlignment="CENTER"/>
+                <Label font="$x2" layoutX="132.0" layoutY="174.0" text="Width" textAlignment="CENTER"/>
+                <Label font="$x2" layoutX="127.0" layoutY="233.0" text="Height" textAlignment="CENTER"/>
+                <Label font="$x2" layoutX="56.0" layoutY="469.0" text="Passenger Count" textAlignment="CENTER"/>
+                <Label font="$x2" layoutX="123.0" layoutY="290.0" text="Weight" textAlignment="CENTER"/>
+                <TextField id="LENGTH" fx:id="ID" layoutX="183.0" layoutY="54.0" prefHeight="37.9609375"
+                           prefWidth="123.99993896484375"/>
+                <TextField fx:id="WIDTH" layoutX="183.0" layoutY="166.0" prefHeight="37.9609375"
+                           prefWidth="123.99993896484375"/>
+                <TextField fx:id="HEIGHT" layoutX="183.0" layoutY="225.0" prefHeight="37.9609375"
+                           prefWidth="123.99993896484375"/>
+                <TextField fx:id="MASS" layoutX="183.0" layoutY="282.0" prefHeight="37.9609375"
+                           prefWidth="123.99993896484375"/>
+                <TextField fx:id="CARS" layoutX="183.0" layoutY="342.0" prefHeight="37.9609375"
+                           prefWidth="123.99993896484375"/>
+                <TextField fx:id="CREW_COUNT" layoutX="183.0" layoutY="400.0" prefHeight="37.9609375"
+                           prefWidth="123.99993896484375"/>
+                <TextField fx:id="PASSENGER_COUNT" layoutX="183.0" layoutY="461.0" prefHeight="37.9609375"
+                           prefWidth="123.99993896484375"/>
+                <Label font="$x2" layoutX="139.0" layoutY="62.0" text="Train" textAlignment="CENTER"/>
+                <Label layoutX="293.0" layoutY="117.0" text="ft"/>
+                <Label layoutX="293.0" layoutY="175.0" text="ft"/>
+                <Label layoutX="293.0" layoutY="234.0" text="ft"/>
+                <Label layoutX="284.0" layoutY="291.0" text="lbs"/>
+            </children>
+        </Pane>
+        <Pane layoutX="654.0" layoutY="359.0" prefHeight="200.0" prefWidth="200.0">
+            <children>
+                <RadioButton fx:id="ENGINE_FAILURE" layoutX="18.0" layoutY="4.0" mnemonicParsing="false"
+                             prefHeight="68.0" prefWidth="164.0" text="Train Engine Failure"/>
+                <RadioButton fx:id="SIGNAL_FAILURE" layoutX="18.0" layoutY="61.0" mnemonicParsing="false"
+                             prefHeight="68.0" prefWidth="164.0" text="Signal Pickup Failure"/>
+                <RadioButton fx:id="BRAKE_FAILURE" layoutX="18.0" layoutY="124.0" mnemonicParsing="false"
+                             prefHeight="68.0" prefWidth="164.0" text="Brake Failure"/>
+            </children>
+        </Pane>
+        <Slider id="CABIN_TEMP" fx:id="CABIN_TEMP_SLIDER" layoutX="91.0" layoutY="83.0" orientation="VERTICAL"
+                prefHeight="167.0" prefWidth="52.0"/>
+        <Label layoutX="54.0" layoutY="303.0" text="Cabin Temperature"/>
+        <TextField fx:id="CABIN_TEMP" layoutX="49.0" layoutY="256.0" prefHeight="37.9609375" prefWidth="136.0"/>
+        <Circle fx:id="BRAKE_INDICATOR" fill="WHITE" layoutX="112.0" layoutY="445.0" radius="24.0" strokeType="INSIDE">
+            <stroke>
+                <Color blue="0.500" green="0.500" red="0.500" fx:id="x3"/>
+            </stroke>
+        </Circle>
+        <Circle fx:id="LIGHTS_INDICATOR" fill="WHITE" layoutX="306.0" layoutY="446.0" radius="24.0" stroke="$x3"
+                strokeType="INSIDE"/>
+        <Rectangle fx:id="LEFT_DOORS" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="78.0" layoutX="466.0"
+                   layoutY="411.0" strokeType="INSIDE" width="26.0">
+            <stroke>
+                <Color blue="0.625" green="0.625" red="0.625" fx:id="x4"/>
+            </stroke>
+        </Rectangle>
+        <Rectangle fx:id="RIGHT_DOORS" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="78.0" layoutX="518.0"
+                   layoutY="412.0" stroke="$x4" strokeType="INSIDE" width="26.0"/>
+        <Label layoutX="90.0" layoutY="489.0" text="Brakes"/>
+        <Label layoutX="486.0" layoutY="500.0" text="Doors"/>
+        <Label layoutX="285.0" layoutY="489.0" text="Lights"/>
+        <Label layoutX="557.0" layoutY="440.0" text="R"/>
+        <Label layoutX="444.0" layoutY="441.0" text="L"/>
+        <Label layoutX="171.0" layoutY="265.0" text="F"/>
+        <Label layoutX="137.0" layoutY="230.0" text="0   F"/>
+        <Label layoutX="131.0" layoutY="88.0" text="100  F"/>
+    </children>
 </AnchorPane>
