--- a/TrainModel/src/main/resources/fxml/StartupUI.fxml
+++ b/TrainModel/src/main/resources/fxml/StartupUI.fxml
@@ -1,39 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-
-<AnchorPane minHeight="440.0" prefHeight="450.5" prefWidth="375.5" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="TrainModel.StartupController">
-  <children>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" height="98.0" layoutX="0.0" layoutY="352.0" stroke="WHITE" strokeType="CENTERED" width="375.0">
-      <fill>
-        <Color blue="0.875" green="0.875" red="0.875" fx:id="x1" />
-      </fill>
-    </Rectangle>
-    <TextField fx:id="CARS" layoutX="30.0" layoutY="165.0" prefWidth="298.0" />
-    <TextField fx:id="POWER" layoutX="30.0" layoutY="232.0" prefWidth="298.0" />
-    <TextField fx:id="GRADE" layoutX="30.0" layoutY="301.0" prefWidth="298.0" />
-    <Label layoutX="30.0" layoutY="212.0" text="Power (Double)" />
-    <Label layoutX="30.0" layoutY="281.0" text="Grade (Double)" />
-    <Button layoutX="10.0" layoutY="363.0" mnemonicParsing="false" onAction="#startButton" prefHeight="77.0" prefWidth="170.0" style="-fx-background-color: #65f767" text="START" />
-    <Button layoutX="195.0" layoutY="363.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="170.0" style="-fx-background-color: #f76565" text="END" />
-    <Label layoutX="30.0" layoutY="145.0" text="Number of Cars (Integer)" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="$x1" height="108.0" layoutX="11.0" layoutY="15.0" stroke="WHITE" strokeType="CENTERED" width="354.0" />
-    <Label layoutX="12.0" layoutY="19.0" text="Train Model Startup">
-      <font>
-        <Font size="40.0" />
-      </font>
-    </Label>
-    <Label layoutX="14.0" layoutY="73.0" prefHeight="44.0" prefWidth="352.0" text="Complete all fields. Press start to begin Train Model simulation." textAlignment="CENTER" textFill="#cc0000" wrapText="true" />
-    <Label layoutX="300.0" layoutY="235.0" text="kW" />
-    <Label layoutX="291.0" layoutY="168.0" text="Cars" />
-    <Label layoutX="306.0" layoutY="304.0" text="\%" />
-  </children>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<AnchorPane minHeight="440.0" prefHeight="450.5" prefWidth="375.5" xmlns:fx="http://javafx.com/fxml/1"
+            xmlns="http://javafx.com/javafx/2.2" fx:controller="TrainModel.StartupController">
+    <children>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" height="98.0" layoutX="0.0" layoutY="352.0" stroke="WHITE"
+                   strokeType="CENTERED" width="375.0">
+            <fill>
+                <Color blue="0.875" green="0.875" red="0.875" fx:id="x1"/>
+            </fill>
+        </Rectangle>
+        <TextField fx:id="CARS" layoutX="30.0" layoutY="165.0" prefWidth="298.0"/>
+        <TextField fx:id="POWER" layoutX="30.0" layoutY="232.0" prefWidth="298.0"/>
+        <TextField fx:id="GRADE" layoutX="30.0" layoutY="301.0" prefWidth="298.0"/>
+        <Label layoutX="30.0" layoutY="212.0" text="Power (Double)"/>
+        <Label layoutX="30.0" layoutY="281.0" text="Grade (Double)"/>
+        <Button layoutX="10.0" layoutY="363.0" mnemonicParsing="false" onAction="#startButton" prefHeight="77.0"
+                prefWidth="170.0" style="-fx-background-color: #65f767" text="START"/>
+        <Button layoutX="195.0" layoutY="363.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="170.0"
+                style="-fx-background-color: #f76565" text="END"/>
+        <Label layoutX="30.0" layoutY="145.0" text="Number of Cars (Integer)"/>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="$x1" height="108.0" layoutX="11.0" layoutY="15.0" stroke="WHITE"
+                   strokeType="CENTERED" width="354.0"/>
+        <Label layoutX="12.0" layoutY="19.0" text="Train Model Startup">
+            <font>
+                <Font size="40.0"/>
+            </font>
+        </Label>
+        <Label layoutX="14.0" layoutY="73.0" prefHeight="44.0" prefWidth="352.0"
+               text="Complete all fields. Press start to begin Train Model simulation." textAlignment="CENTER"
+               textFill="#cc0000" wrapText="true"/>
+        <Label layoutX="300.0" layoutY="235.0" text="kW"/>
+        <Label layoutX="291.0" layoutY="168.0" text="Cars"/>
+        <Label layoutX="306.0" layoutY="304.0" text="\%"/>
+    </children>
 </AnchorPane>
